<resources>
    <string name="app_name">Neighborhood</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="back_to_login">Already registered?</string>
    <string name="go_to_register">Not registered? Create Here</string>
    <string name="no_access">Can\'t access you account?</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth(dd/mm/yyyy)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>